# pyperplan

./: .gitignore  .hgignore  .zenodo.json  CHANGELOG.md  MANIFEST.in  README  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ubuntu.yml
benchmarks/: README  README.md
benchmarks/depot/: task04.pddl  task05.pddl  task06.pddl  task07.pddl  task08.pddl  task09.pddl  task10.pddl  task11.pddl  task12.pddl  task13.pddl  task14.pddl  task15.pddl  task16.pddl  task17.pddl  task18.pddl  task19.pddl  task20.pddl  task21.pddl  task22.pddl
benchmarks/elevators/: domain.pddl  task01.pddl  task02.pddl  task03.pddl  task04.pddl  task05.pddl  task06.pddl  task07.pddl  task08.pddl  task09.pddl  task10.pddl  task11.pddl  task12.pddl  task13.pddl  task14.pddl  task15.pddl  task16.pddl  task17.pddl  task18.pddl  task19.pddl  task20.pddl  task21.pddl  task22.pddl  task23.pddl  task24.pddl  task25.pddl  task26.pddl  task27.pddl  task28.pddl  task29.pddl  task30.pddl
benchmarks/freecell/: task01.pddl  task02.pddl  task03.pddl  task04.pddl  task05.pddl  task06.pddl  task07.pddl  task08.pddl  task09.pddl  task10.pddl  task11.pddl  task12.pddl  task13.pddl  task14.pddl  task15.pddl  task16.pddl  task17.pddl  task18.pddl  task19.pddl  task20.pddl
benchmarks/logistics/: task19.pddl
benchmarks/openstacks/: domain01.pddl  domain02.pddl  domain03.pddl  domain04.pddl  domain05.pddl  domain06.pddl  domain07.pddl  domain08.pddl  domain09.pddl  domain10.pddl  domain11.pddl  domain12.pddl  domain13.pddl  domain14.pddl  domain15.pddl  domain16.pddl  domain17.pddl  domain18.pddl  domain19.pddl  domain20.pddl  domain21.pddl  domain22.pddl  domain23.pddl  domain24.pddl  domain25.pddl  domain26.pddl  domain27.pddl  domain28.pddl  domain29.pddl  domain30.pddl  task01.pddl  task02.pddl  task03.pddl  task04.pddl  task05.pddl  task06.pddl  task07.pddl  task08.pddl  task09.pddl  task10.pddl  (+20 more)
benchmarks/parcprinter/: domain09.pddl  domain18.pddl  domain26.pddl  task01.pddl  task02.pddl  task03.pddl  task04.pddl  task05.pddl  task06.pddl  task07.pddl  task08.pddl  task09.pddl  task10.pddl  task11.pddl  task14.pddl  task15.pddl  task16.pddl  task18.pddl  task19.pddl  task20.pddl  task22.pddl  task23.pddl  task27.pddl
benchmarks/pegsol/: domain.pddl  task01.pddl  task02.pddl  task03.pddl  task04.pddl  task05.pddl  task06.pddl  task07.pddl  task08.pddl  task09.pddl  task10.pddl  task11.pddl  task12.pddl  task13.pddl  task14.pddl  task15.pddl  task16.pddl  task17.pddl  task18.pddl  task19.pddl  task20.pddl  task21.pddl  task22.pddl  task23.pddl  task24.pddl  task25.pddl  task26.pddl  task27.pddl  task28.pddl  task29.pddl  task30.pddl
benchmarks/psr-small/: .domain25.pddl.icloud
benchmarks/satellite/: domain.pddl  task01.pddl  task02.pddl  task03.pddl  task04.pddl  task05.pddl  task06.pddl  task07.pddl  task08.pddl  task09.pddl  task10.pddl  task11.pddl  task12.pddl  task13.pddl  task14.pddl  task15.pddl  task16.pddl  task17.pddl  task18.pddl  task19.pddl  task20.pddl
benchmarks/scanalyzer/: domain.pddl  task01.pddl  task02.pddl  task03.pddl  task04.pddl  task05.pddl  task06.pddl  task07.pddl  task08.pddl  task09.pddl  task10.pddl  task11.pddl  task12.pddl  task13.pddl  task14.pddl  task15.pddl  task16.pddl  task17.pddl  task18.pddl  task19.pddl  task20.pddl  task21.pddl  task22.pddl  task23.pddl  task24.pddl  task25.pddl  task26.pddl  task27.pddl  task28.pddl  task29.pddl  task30.pddl
benchmarks/sokoban/: domain.pddl  task01.pddl  task02.pddl  task03.pddl  task04.pddl  task05.pddl  task06.pddl  task07.pddl  task08.pddl  task09.pddl  task10.pddl  task11.pddl  task12.pddl  task13.pddl  task14.pddl  task15.pddl  task16.pddl  task17.pddl  task18.pddl  task19.pddl  task20.pddl  task21.pddl  task22.pddl  task23.pddl  task24.pddl  task25.pddl  task26.pddl  task27.pddl  task28.pddl  task29.pddl  task30.pddl
benchmarks/tpp/: task01.pddl.soln
benchmarks/transport/: domain.pddl  task01.pddl  task02.pddl  task03.pddl  task04.pddl  task05.pddl  task06.pddl  task07.pddl  task08.pddl  task09.pddl  (+21 more)
dev/: benchmark-grounding.py  benchmark-search.py  benchmark_grounding.py  benchmark_search.py  build-mypyc.py  compare-benchmarks.py  compare_benchmarks.py  make-release-notes.py  release.sh
doc/: Makefile  documentation.md  documentation.txt
pyperplan/: __main__.py  grounding.py  planner.py  successor_generator.py  task.py  tools.py
src/: grounding.py  pyperplan.py  run.py  task.py  tools.py
(+157 files in other folders)
