[project]
name = "pyperplan"
version = "2.1"
description = "A lightweight STRIPS planner written in Python."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GPL3+" }
dependencies = []

[project.scripts]
pyperplan = "pyperplan.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
case_sensitive = false
force_single_line = false
force_sort_within_sections = true
include_trailing_comma = true
known_first_party = "pyperplan"
known_third_party = "pytest"
line_length = 88
lines_after_imports = 2  # -1 puts 2 lines before classes and functions, otherwise 1 line
multi_line_output = 3
order_by_type = false
