[project]
name = "pyperplan"
version = "2.1"
description = "A lightweight STRIPS planner written in Python."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
keywords = ["classical planning", "STRIPS"]
authors = [{ name = "Jendrik Seipp", email = "jendrik.seipp@liu.se" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/aibasel/pyperplan"

[project.scripts]
pyperplan = "pyperplan.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyperplan*"]

[dependency-groups]
dev = [
    "pytest",
    "ruff==0.15.2",
]

[tool.ruff]
line-length = 88
# Target the minimum supported Python version so lints and autofixes only
# suggest syntax that runs on all supported interpreters.
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["F403", "F405", "F811"]

[tool.ruff.lint.isort]
known-first-party = ["pyperplan"]
